# Esercitazione_6_Sorting

./: .gitignore  main.cpp  main_test.cpp  test_sorting_algorithm.hpp
build2/: CMakeCache.txt  Makefile  Sorting2  Sorting2_TEST  cmake_install.cmake
build2/src/: Makefile  cmake_install.cmake
build2/src_test/: Makefile  cmake_install.cmake
src/: CMakeLists.txt  sorts.cpp  sorts.hpp
